--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Examples from the Open Source BootCamp 2025"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastmcp>=2.13.0.2",
     "langchain>=1.0.5",
     "langchain-core>=1.0.4",
+    "langchain-mcp-adapters>=0.1.12",
     "langchain-openai>=1.0.2",
     "langgraph>=1.0.2",
     "markitdown>=0.1.3",
