--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,6 @@ dependencies = [
     "langchain-mcp-adapters>=0.1.12",
     "langchain-openai>=1.0.2",
     "langgraph>=1.0.2",
-    "markitdown>=0.1.3",
+    "markitdown[all]>=0.1.3",
     "python-dotenv>=1.2.1",
 ]
