enh: add image processing, code running and web search tools

--- a/conf_example.env
+++ b/conf_example.env
@@ -1,3 +1,5 @@
 OPENROUTER_API_KEY="KEY"
 TAVILY_API_KEY="KEY"
 BASE_MODEL="google/gemini-2.0-flash-lite-001"
+# https://e2b.dev/
+E2B_API_KEY="KEY"
