--- a/conf_example.env
+++ b/conf_example.env
@@ -4,3 +4,4 @@ BASE_MODEL=Qwen/Qwen3-Next-80B-A3B-Instruct
 BASE_URL=https://foundation-models.api.cloud.ru/v1
 # https://e2b.dev/
 E2B_API_KEY=
+OPENROUTER_API_KEY=
