--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "langchain-openai>=1.0.2",
     "langchain-tavily>=0.2.13",
     "langgraph>=1.0.2",
+    "marimo>=0.17.7",
     "markitdown[all]>=0.1.3",
     "pydantic>=2.12.4",
     "python-dotenv>=1.2.1",
