--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "langgraph>=1.0.2",
     "marimo>=0.17.7",
     "markitdown[all]>=0.1.3",
+    "notebook>=7.5.3",
     "pydantic>=2.12.4",
     "python-dotenv>=1.2.1",
 ]
